kube/dev/manifests/fe/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fe
spec:
  selector:
    app: fe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
