kube/dev/manifests/fe/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fe-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
    - host: www.dev.careerbee.co.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fe
                port:
                  number: 80
